--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-config-next": "15.2.2",
     "eslint-plugin-storybook": "^0.11.6",
     "playwright": "^1.51.1",
+    "prettier": "3.5.3",
     "storybook": "^8.6.7",
     "tailwindcss": "^4",
     "typescript": "^5",
